--- a/painel_cliente/static/painel_cliente/css/components/cards.css
+++ b/painel_cliente/static/painel_cliente/css/components/cards.css
@@ -15,7 +15,7 @@
 .card-title {
   font-size: 1.25rem;
   font-weight: 600;
-  color: #2d3748;
+  color: var(--color-heading);
 }
 
 .card-content {
