Ajustar layout da gestão para largura total

--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'gestao/css/main.css' %}">
     <link rel="stylesheet" href="{% static 'gestao/formulario_base_gestao.css' %}">
     <link rel="stylesheet" href="{% static 'painel_cliente/css/layout/layout.css' %}">
+    <link rel="stylesheet" href="{% static 'gestao/css/layout.css' %}">
 
     {% block extra_head %}{% endblock %}
 </head>
