--- a/gestao/templates/admin_custom/form_emissor_parceiro.html
+++ b/gestao/templates/admin_custom/form_emissor_parceiro.html
@@ -16,6 +16,11 @@
         {{ form.nome }}
     </div>
     <div class="form-group single">
+        <label class="form-label" for="{{ form.programas.id_for_label }}">Programas de fidelidade</label>
+        {{ form.programas }}
+        <p class="helper-text">Selecione os programas disponíveis para a empresa.</p>
+    </div>
+    <div class="form-group single">
         <label class="form-label" for="{{ form.ativo.id_for_label }}">Ativo</label>
         {{ form.ativo }}
     </div>
