Update client panel for tax field rename

--- a/painel_cliente/templates/painel_cliente/dashboard.html
+++ b/painel_cliente/templates/painel_cliente/dashboard.html
@@ -45,8 +45,8 @@
                 <span class="valor">{{ qtd_emissoes }}</span>
                 <span class="label">Valor de referência acumulado</span>
                 <span class="valor">R$ {{ valor_total_referencia|floatformat:2 }}</span>
-                <span class="label">Valor total pago</span>
-                <span class="valor">R$ {{ valor_total_pago|floatformat:2 }}</span>
+                <span class="label">Total de taxas</span>
+                <span class="valor">R$ {{ valor_total_taxas|floatformat:2 }}</span>
                 <span class="label">Valor total economizado</span>
                 <span class="valor">R$ {{ valor_total_economizado|floatformat:2 }}</span>
             </div>
